[tool.poetry]
name = "oxide_atlas"
version = "0.1.0"
description = ""
authors = ["Felix Sheldon <fluxen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
pyproj = "^3.5.0"
geopandas = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
